--- a/8/lesson8/Elastico/package.json
+++ b/8/lesson8/Elastico/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "node-static": "^0.7.11"
   }
 }
