--- a/8/lesson8/Elastico/package.json
+++ b/8/lesson8/Elastico/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "node-static": "^0.7.11"
+    "node-static": "^0.7.11",
+    "nodemon": "^2.0.18"
   }
 }
